<resources>
    <string name="app_name">vidhost</string>
		<string name="abc_action_bar_home_description">Navigate home</string>
		<string name="abc_action_bar_up_description">Navigate up</string>
		<string name="abc_action_menu_overflow_description">More options</string>
		<string name="abc_action_mode_done">Done</string>
		<string name="abc_activity_chooser_view_see_all">See all</string>
		<string name="abc_activitychooserview_choose_application">Choose an app</string>
		<string name="abc_capital_off">OFF</string>
		<string name="abc_capital_on">ON</string>
		<string name="abc_menu_alt_shortcut_label">Alt+</string>
		<string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
		<string name="abc_menu_delete_shortcut_label">delete</string>
		<string name="abc_menu_enter_shortcut_label">enter</string>
		<string name="abc_menu_function_shortcut_label">Function+</string>
		<string name="abc_menu_meta_shortcut_label">Meta+</string>
		<string name="abc_menu_shift_shortcut_label">Shift+</string>
		<string name="abc_menu_space_shortcut_label">space</string>
		<string name="abc_menu_sym_shortcut_label">Sym+</string>
		<string name="abc_prepend_shortcut_label">Menu+</string>
		<string name="abc_search_hint">Search…</string>
		<string name="abc_searchview_description_clear">Clear query</string>
		<string name="abc_searchview_description_query">Search query</string>
		<string name="abc_searchview_description_search">Search</string>
		<string name="abc_searchview_description_submit">Submit query</string>
		<string name="abc_searchview_description_voice">Voice search</string>
		<string name="abc_shareactionprovider_share_with">Share with</string>
		<string name="abc_shareactionprovider_share_with_application">Share with %s</string>
		<string name="abc_toolbar_collapse_description">Collapse</string>
		<string name="agentweb_camera">Camera</string>
		<string name="agentweb_cancel">Cancel</string>
		<string name="agentweb_click_open">Tap to continue</string>
		<string name="agentweb_coming_soon_download">Coming soon to download the file</string>
		<string name="agentweb_current_downloaded_length">downloaded:%s</string>
		<string name="agentweb_current_downloading_progress">Downloading:%s</string>
		<string name="agentweb_default_page_error">error~</string>
		<string name="agentweb_download">Download</string>
		<string name="agentweb_download_fail">Download failed!</string>
		<string name="agentweb_download_task_has_been_exist">The task already exists, do not repeat click to download!</string>
		<string name="agentweb_file_chooser">Files</string>
		<string name="agentweb_file_download">Download</string>
		<string name="agentweb_honeycomblow">Wi-Fi disconnected. Continue the download via mobile data network?</string>
		<string name="agentweb_leave">Go away</string>
		<string name="agentweb_leave_app_and_go_other_page">leaving %s and opening another app?</string>
		<string name="agentweb_loading">Loading ...</string>
		<string name="agentweb_max_file_length_limit">The selected file can not be larger than %s MB</string>
		<string name="agentweb_tips">Note</string>
		<string name="agentweb_trickter">You have a new notice</string>
		<string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
		<string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
		<string name="browse_banner_title_four">Click \"Download \"</string>
		<string name="browse_banner_title_one">Click \"Browse Facebook\"</string>
		<string name="browse_banner_title_three">Find and Click the video</string>
		<string name="browse_banner_title_two">Log in Facebook website</string>
		<string name="browse_button">BROWSE Facebook</string>
		<string name="browse_facebook_login_message">"We won't get your password in any way."</string>
		<string name="browse_go_it">GOT IT !</string>
		<string name="browse_network_error">Page loading failed .</string>
		<string name="browse_play_dialog">Click \" PLAY \" Button to</string>
		<string name="browse_play_text">DOWNLOAD VIDEOS</string>
		<string name="browse_refresh">Refresh</string>
		<string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
		<string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
		<string name="character_counter_pattern">%1$d/%2$d</string>
		<string name="check_permission_privacy">privacy policy</string>
		<string name="chip_text">Chip text</string>
		<string name="clear_text_end_icon_content_description">Clear text</string>
		<string name="close">Close</string>
		<string name="common_google_play_services_enable_button">Enable</string>
		<string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
		<string name="common_google_play_services_enable_title">Enable Google Play services</string>
		<string name="common_google_play_services_install_button">Install</string>
		<string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
		<string name="common_google_play_services_install_title">Get Google Play services</string>
		<string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
		<string name="common_google_play_services_notification_ticker">Google Play services error</string>
		<string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
		<string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
		<string name="common_google_play_services_update_button">Update</string>
		<string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
		<string name="common_google_play_services_update_title">Update Google Play services</string>
		<string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
		<string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
		<string name="common_open_on_phone">Open on phone</string>
		<string name="common_signin_button_text">Sign in</string>
		<string name="common_signin_button_text_long">Sign in with Google</string>
		<string name="default_web_client_id">426253579972-7hjouom0cseofioekoauoqsksg18g78h.apps.googleusercontent.com</string>
		<string name="dialog_enter_install">INSTALL</string>
		<string name="download_complete">Download complete!</string>
		<string name="download_failed">Download failed</string>
		<string name="download_finish">Finished Downloading</string>
		<string name="download_image_message">Do you want to download this image ?</string>
		<string name="download_image_text">Image File</string>
		<string name="download_image_title">Image Found</string>
		<string name="download_pause">Download pause!</string>
		<string name="download_video_audio">Audio</string>
		<string name="download_video_hd">HD Video</string>
		<string name="download_video_message">What do you like to do with this video ?</string>
		<string name="download_video_sd">SD Video</string>
		<string name="download_video_title">Video Found</string>
		<string name="download_video_watch">Watch Video</string>
		<string name="downloading_complete">Download Complete</string>
		<string name="downloading_error">Download Error</string>
		<string name="downloading_progress">Download Progress</string>
		<string name="email_not_found">Please install an email app first. Thank you!</string>
		<string name="error_icon_content_description">Error</string>
		<string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
		<string name="fab_transformation_scrim_behavior">android.support.design.transformation.FabTransformationScrimBehavior</string>
		<string name="fab_transformation_sheet_behavior">android.support.design.transformation.FabTransformationSheetBehavior</string>
		<string name="firebase_database_url">https://fb-downloader-e96e9.firebaseio.com</string>
		<string name="gcm_defaultSenderId">426253579972</string>
		<string name="google_api_key">AIzaSyAOUkkVVw66M51_jQOPX42SXzbhfkPnoaw</string>
		<string name="google_app_id">1:426253579972:android:049e92c768a57769c4bb91</string>
		<string name="google_crash_reporting_api_key">AIzaSyAOUkkVVw66M51_jQOPX42SXzbhfkPnoaw</string>
		<string name="google_storage_bucket">fb-downloader-e96e9.appspot.com</string>
		<string name="has_downloaded">Already downloaded</string>
		<string name="hide_bottom_view_on_scroll_behavior">android.support.design.behavior.HideBottomViewOnScrollBehavior</string>
		<string name="icon_content_description">Dialog Icon</string>
		<string name="item_view_role_description">Tab</string>
		<string name="link_banner_title_one">Open Facebook</string>
		<string name="link_banner_title_three">Open FB Downloader</string>
		<string name="link_banner_title_two">Copy the video link you want to download</string>
		<string name="link_btn_text">OPEN FACEBOOK</string>
		<string name="link_check_empty">No content in clipboard</string>
		<string name="link_check_message">Only supports downloading from Facebook</string>
		<string name="link_check_url">Checking URL...</string>
		<string name="link_check_url_message">This is an invalid link</string>
		<string name="link_dialog_btn_text">Log in Facebook</string>
		<string name="link_dialog_hint_text">"You will log in the Facebook. We won't get your password in any way."</string>
		<string name="link_dialog_message">Why do you need to login</string>
		<string name="link_dialog_message_two">Private content only can be accessed by followers,so you need login to your account to continue.</string>
		<string name="link_dialog_text">Please log in Facebook on the homepage to download.</string>
		<string name="link_dialog_title">This is a Private Post</string>
		<string name="link_download">DOWNLOAD</string>
		<string name="link_download_queue_exist">Already downloaded</string>
		<string name="link_download_queue_proceed">Start downloading</string>
		<string name="link_download_queue_ready">Added to download queue</string>
		<string name="link_edit_text_hint">Paste Facebook video link</string>
		<string name="link_network_error">Network Error</string>
		<string name="link_past">PASTE</string>
		<string name="material_slider_range_end">Range end,</string>
		<string name="material_slider_range_start">Range start,</string>
		<string name="md_back_label">Back</string>
		<string name="md_cancel_label">Cancel</string>
		<string name="md_choose_label">Choose</string>
		<string name="md_custom_label">Custom</string>
		<string name="md_done_label">Done</string>
		<string name="md_error_label">Error</string>
		<string name="md_presets_label">Presets</string>
		<string name="md_storage_perm_error">Your app has not been granted the READ_EXTERNAL_STORAGE permission.</string>
		<string name="menu_text_how">How to Download</string>
		<string name="menu_text_setting">Settings</string>
		<string name="menu_text_share">Share APP</string>
		<string name="mtrl_badge_numberless_content_description">New notification</string>
		<string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
		<string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
		<string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
		<string name="mtrl_picker_a11y_next_month">Change to next month</string>
		<string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
		<string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
		<string name="permission_cancel">CANCEL</string>
</resources>