<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:background="@drawable/dialog_download_bg"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<android.support.v7.widget.CardView
		xmlns:card_view="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="182dp"
		card_view:cardCornerRadius="6dp"
		android:layout_marginStart="20dp"
		android:layout_marginEnd="20dp"
		android:layout_marginTop="22.0dip"
		card_view:cardElevation="3dp"
		card_view:cardUseCompatPadding="true">

		<ImageView
			android:id="@+id/iv_logo"
			android:layout_width="match_parent"
			android:layout_height="180dp"
			android:src="@drawable/ic_video"
			android:scaleType="fitXY"/>

	</android.support.v7.widget.CardView>

	<TextView
		android:textSize="18.0sp"
		android:id="@+id/title"
		android:textColor="#ffffffff"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/download_video_title"
		android:fontFamily="sans-serif-black"
		android:layout_marginStart="12.0dip"/>

	<TextView
		android:textSize="14.0sp"
		android:textColor="#ffffffff"
		android:id="@id/tv_message"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10.0dip"
		android:text="@string/download_video_message"
		android:fontFamily="sans-serif"
		android:layout_marginStart="16.0dip"/>

	<LinearLayout
		android:id="@id/cl_download_main"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="24.0dip"
		android:layout_marginStart="16.0dip"
		android:layout_marginEnd="16.0dip"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_message"
		android:orientation="vertical">

		<RelativeLayout
			android:id="@id/cl_sd"
			android:background="@drawable/dialog_download_item_bg"
			android:layout_width="fill_parent"
			android:layout_height="48.0dip"
			android:layout_marginTop="8.0dip"
			android:clickable="true"
			android:foreground="?android:attr/selectableItemBackground"
			android:gravity="center_vertical|center_horizontal">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="false">

				<ImageView
					android:id="@id/iv_sd"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_video_dark"
					android:layout_marginStart="14.0dip"/>

				<TextView
					android:textSize="15.0sp"
					android:textColor="#ff2c2c2c"
					android:layout_gravity="center_vertical"
					android:id="@id/tv_sd"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/download_video_sd"
					android:fontFamily="sans-serif-medium"
					android:layout_marginStart="15.0dip"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true">

				<TextView
					android:textSize="11.0sp"
					android:textColor="#ff676767"
					android:id="@id/sd_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="sans-serif"
					android:layout_marginEnd="16.0dip"
					android:text="2.83mb"
					android:gravity="right"
					android:layout_gravity="right|center"
					android:layout_alignParentRight="true"/>

				<ImageView
					android:id="@id/sd_download"
					android:visibility="visible"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_download"
					android:layout_marginEnd="18.0dip"/>

				<com.github.ybq.android.spinkit.SpinKitView
					android:id="@id/sd_spin_kit"
					android:visibility="visible"
					android:layout_width="24.0dip"
					android:layout_height="24.0dip"
					android:layout_marginEnd="18.0dip"
					app:SpinKit_Color="@color/colorPrimary"
					style="@style/SpinKitView.Small.DoubleBounce"
					android:layout_gravity="right|center"
					android:layout_alignParentRight="true"/>

			</LinearLayout>

		</RelativeLayout>

		<RelativeLayout
			android:id="@id/cl_hd"
			android:background="@drawable/dialog_download_item_bg"
			android:layout_width="fill_parent"
			android:layout_height="48.0dip"
			android:layout_marginTop="8.0dip"
			android:clickable="true"
			android:foreground="?android:attr/selectableItemBackground"
			android:gravity="center_vertical|center_horizontal">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="false">

				<ImageView
					android:id="@id/iv_hd"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_video_dark"
					android:layout_marginStart="14.0dip"/>

				<TextView
					android:textSize="15.0sp"
					android:textColor="#ff2c2c2c"
					android:layout_gravity="center_vertical"
					android:id="@id/tv_hd"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/download_video_hd"
					android:fontFamily="sans-serif-medium"
					android:layout_marginStart="15.0dip"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true">

				<TextView
					android:textSize="11.0sp"
					android:textColor="#ff676767"
					android:id="@id/hd_size"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:fontFamily="sans-serif"
					android:layout_marginEnd="16.0dip"
					android:text="0.00MB"
					android:gravity="right"
					android:layout_gravity="right|center"
					android:layout_alignParentRight="true"/>

				<ImageView
					android:id="@id/hd_download"
					android:visibility="visible"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_download"
					android:layout_marginEnd="18.0dip"/>

				<com.github.ybq.android.spinkit.SpinKitView
					android:id="@id/sd_spin_kit"
					android:visibility="visible"
					android:layout_width="24.0dip"
					android:layout_height="24.0dip"
					android:layout_marginEnd="18.0dip"
					app:SpinKit_Color="@color/colorPrimary"
					style="@style/SpinKitView.Small.DoubleBounce"
					android:layout_gravity="right|center"
					android:layout_alignParentRight="true"/>

			</LinearLayout>

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/cl_play"
			android:background="@drawable/dialog_download_item_bg"
			android:layout_width="fill_parent"
			android:layout_height="48.0dip"
			android:layout_marginTop="8.0dip"
			android:clickable="true"
			android:foreground="?android:attr/selectableItemBackground"
			android:gravity="center_vertical|center_horizontal">

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="false">

				<ImageView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_video_dark"
					android:layout_marginStart="14.0dip"/>

				<TextView
					android:textSize="15.0sp"
					android:textColor="#ff2c2c2c"
					android:layout_gravity="center_vertical"
					android:id="@id/tv_hd"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Play Online"
					android:fontFamily="sans-serif-medium"
					android:layout_marginStart="15.0dip"/>

			</LinearLayout>

			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true">

				<ImageView
					android:id="@id/hd_download"
					android:visibility="visible"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:src="@drawable/ic_play"
					android:layout_marginEnd="18.0dip"/>
				<com.github.ybq.android.spinkit.SpinKitView
					android:id="@id/sd_spin_kit"
					android:visibility="visible"
					android:layout_width="24.0dip"
					android:layout_height="24.0dip"
					android:layout_marginEnd="18.0dip"
					app:SpinKit_Color="@color/colorPrimary"
					style="@style/SpinKitView.Small.DoubleBounce"
					android:layout_gravity="right|center"
					android:layout_alignParentRight="true"/>
				
			</LinearLayout>

		</RelativeLayout>

	</LinearLayout>

	<TextView
		android:textSize="16.0sp"
		android:textColor="#ffffffff"
		android:gravity="center"
		android:id="@id/tv_cancel"
		android:background="@drawable/cancel_download_bg"
		android:layout_width="fill_parent"
		android:layout_height="48.0dip"
		android:layout_marginTop="16.0dip"
		android:text="@string/permission_cancel"
		android:clickable="true"
		android:foreground="?android:attr/selectableItemBackground"
		android:fontFamily="sans-serif"/>

</LinearLayout>


